--- a/views/_reservation_activity_tickets.erb
+++ b/views/_reservation_activity_tickets.erb
@@ -6,7 +6,9 @@
                   <select name="quantity_rate_1" id="quantity_rate_1" class="quantity_rate" style="width:99%">
                     <option value="0" data-total="0"><%=t.activity.choose_tickets(@activity.price_1_description)%></option>
                     <% (1..[10 - @shopping_cart.item_quantity(@activity.code, 1), @occupation[:occupation_capacity] - ((@occupation[:occupation_detail][1].to_i) || 0)].min).each do |quantity| %>
-                      <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[1][quantity] ||0)%>"><%="#{quantity} X #{@activity.price_1_description} #{"%.2f" % (rates[1][quantity]||0)}€"%></option>
+                      <% if quantity % @activity.price_1_step_tickets == 0 %>
+                        <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[1][quantity] ||0)%>"><%="#{quantity} X #{@activity.price_1_description} #{"%.2f" % (rates[1][quantity]||0)}€"%></option>
+                      <% end %>
                     <% end %>
                   </select>
                 </div>
@@ -16,8 +18,10 @@
                   <select name="quantity_rate_2" id="quantity_rate_2" class="quantity_rate" style="width:99%">
                     <option value="0" data-total="0"><%=t.activity.choose_tickets(@activity.price_2_description)%></option>
                     <% (1..[10 - @shopping_cart.item_quantity(@activity.code, 2), @occupation[:occupation_capacity] - ((@occupation[:occupation_detail][2].to_i) || 0)].min).each do |quantity| %>
-                      <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[2][quantity]||0)%>"><%="#{quantity} X #{@activity.price_2_description} #{"%.2f" % (rates[2][quantity]||0)}€"%></option>
-                    <% end %>                    
+                      <% if quantity % @activity.price_2_step_tickets == 0 %>
+                        <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[2][quantity]||0)%>"><%="#{quantity} X #{@activity.price_2_description} #{"%.2f" % (rates[2][quantity]||0)}€"%></option>
+                      <% end %>
+                    <% end %>
                   </select>
                 </div>
                 <% end %>
@@ -26,7 +30,9 @@
                   <select name="quantity_rate_3" id="quantity_rate_3" class="quantity_rate" style="width:99%">
                     <option value="0" data-total="0"><%=t.activity.choose_tickets(@activity.price_3_description)%></option>
                     <% (1..[10 - @shopping_cart.item_quantity(@activity.code, 3), @occupation[:occupation_capacity] - ((@occupation[:occupation_detail][3].to_i) || 0)].min).each do |quantity| %>
-                      <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[3][quantity]||0)%>"><%="#{quantity} X #{@activity.price_3_description} #{"%.2f" % (rates[3][quantity]||0)}€"%></option>
+                      <% if quantity % @activity.price_3_step_tickets == 0 %>
+                        <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[3][quantity]||0)%>"><%="#{quantity} X #{@activity.price_3_description} #{"%.2f" % (rates[3][quantity]||0)}€"%></option>
+                      <% end %>
                     <% end %>                    
                   </select>	
                 </div>
